--- a/jair.bib
+++ b/jair.bib
@@ -82,10 +82,13 @@
     year = {2007}
 }
 
-@MISC{Hardoon_usingimage,
-    author = {David R. Hardoon and Janaina Mourão-mir and Michael Brammer and Brain Image and Analysis Unit},
-    title = {Using Image Stimuli to Drive fMRI Analysis},
-    year = {}
+@inproceedings{Hardoon_usingimage,
+  title={Using image stimuli to drive fMRI analysis},
+  author={Hardoon, David R and Mourao-Miranda, Janaina and Brammer, Michael and Shawe-Taylor, John},
+  booktitle={Neural Information Processing},
+  pages={477--486},
+  year={2008},
+  organization={Springer}
 }
 
 @article{Kettenring,
